kubernetes/mealie/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: mealie
    meta.helm.sh/release-namespace: mealie
  labels:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mealie
    app.kubernetes.io/version: v1.0.0beta-2
    helm.sh/chart: mealie-5.1.2
  name: mealie
  namespace: mealie
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: mealie
      app.kubernetes.io/name: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-06-30T21:11:48-04:00'
      labels:
        app.kubernetes.io/instance: mealie
        app.kubernetes.io/name: mealie
    spec:
      automountServiceAccountToken: true
      containers:
      - envFrom:
        - configMapRef:
            name: mealie-config
        - secretRef:
            name: mealie-credentials
        image: ghcr.io/mealie-recipes/mealie:v3.28.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9000
          timeoutSeconds: 1
        name: mealie
        ports:
        - containerPort: 9000
          name: api
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9000
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 9000
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/data/
          name: api-data
        - mountPath: /opt/mealie/lib/python3.12/site-packages/mealie/frontend/sw.js
          name: sw-patch
          subPath: sw.js
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/hostname: k81
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: api-data
        persistentVolumeClaim:
          claimName: mealie-api-data
      - configMap:
          defaultMode: 420
          name: mealie-sw-patch
        name: sw-patch
