kubernetes/mealie/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: mealie
    meta.helm.sh/release-namespace: mealie
  labels:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mealie
    app.kubernetes.io/version: v1.0.0beta-2
    helm.sh/chart: mealie-5.1.2
  name: mealie
  namespace: mealie
spec:
  clusterIP: 172.30.186.219
  clusterIPs:
  - 172.30.186.219
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: api
    port: 9000
    protocol: TCP
    targetPort: api
  selector:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/name: mealie
  sessionAffinity: None
  type: ClusterIP
