kubernetes/mealie/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mealie
    app.kubernetes.io/version: v1.0.0beta-2
    helm.sh/chart: mealie-5.1.2
  name: mealie
  namespace: mealie
spec:
  host: mealie-mealie.apps.okd.claffey.cloud
  port:
    targetPort: api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: mealie
    weight: 100
  wildcardPolicy: None
